test/mutation_analysis/s0006_zigzag_conversion/hafis/ablation_o3_full/mutants/14/result.txt
./test/mutation_analysis/s0006_zigzag_conversion/hafis/ablation_o3_full/mutants/14/Solution.java:24: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
